--- a/r3g.config
+++ b/r3g.config
@@ -213,6 +213,7 @@ CONFIG_DEFAULT_luci=y
 CONFIG_DEFAULT_luci-app-cpufreq=y
 CONFIG_DEFAULT_luci-app-filetransfer=y
 CONFIG_DEFAULT_luci-app-turboacc=y
+CONFIG_DEFAULT_luci-app-wolplus=y
 CONFIG_DEFAULT_luci-compat=y
 CONFIG_DEFAULT_luci-lib-base=y
 CONFIG_DEFAULT_luci-lib-fs=y
