--- a/r3g.config
+++ b/r3g.config
@@ -6585,6 +6585,29 @@ CONFIG_PACKAGE_ttyd=y
 # end of Terminal
 
 #
+# MMDVM
+#
+CONFIG_PACKAGE_dapnet-gateway=y
+CONFIG_PACKAGE_ircddb-gateway=y
+CONFIG_PACKAGE_libmmdvm=y
+CONFIG_PACKAGE_libwxwidgets=y
+CONFIG_PACKAGE_mmdvm=y
+CONFIG_PACKAGE_mmdvm-cal=y
+CONFIG_PACKAGE_mmdvm-host=y
+CONFIG_PACKAGE_mmdvm-luci=y
+CONFIG_LUCI_APP_MMDVM=y
+CONFIG_LUCI_THEME_BOOTSTRAP_MMDVM=y
+
+#
+# Translations
+#
+CONFIG_LUCI_LANG_zh-cn=y
+CONFIG_PACKAGE_mmdvm-luci-i18n-zh-cn=y
+CONFIG_PACKAGE_nxdn-clients=y
+CONFIG_PACKAGE_p25-clients=y
+CONFIG_PACKAGE_ysf-clients=y
+
+#
 # Virtualization
 #
 # end of Virtualization
