--- a/r3g.config
+++ b/r3g.config
@@ -6597,6 +6597,10 @@ CONFIG_PACKAGE_mmdvm-host=y
 CONFIG_PACKAGE_mmdvm-luci=y
 CONFIG_LUCI_APP_MMDVM=y
 CONFIG_LUCI_THEME_BOOTSTRAP_MMDVM=y
+CONFIG_PACKAGE_DGIdGateway=y
+CONFIG_PACKAGE_YSFGateway=y 
+CONFIG_PACKAGE_YSFParrot=y 
+CONFIG_PACKAGE_YSFReflector=y
 
 #
 # Translations
