--- a/r3gipk.config
+++ b/r3gipk.config
@@ -19,6 +19,10 @@ CONFIG_LUCI_THEME_BOOTSTRAP_MMDVM=y
 # CONFIG_PACKAGE_YSFParrot is not set
 # CONFIG_PACKAGE_YSFReflector is not set
 CONFIG_PACKAGE_YSF2DMR=y
+CONFIG_PACKAGE_mmdvm-crossmode=y
+CONFIG_PACKAGE_mmdvm-host=y
+CONFIG_PACKAGE_p25-clients=y
+
 #
 # Translations
 #
@@ -27,3 +31,4 @@ CONFIG_PACKAGE_mmdvm-luci-i18n-zh-cn=y
 CONFIG_PACKAGE_nxdn-clients=y
 CONFIG_PACKAGE_p25-clients=y
 CONFIG_PACKAGE_ysf-clients=y
+
