--- a/r3gipk.config
+++ b/r3gipk.config
@@ -1,6 +1,16 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-3g=y
+CONFIG_PACKAGE_luci-app-mmdvm=y
+
+#
+# 4. Themes
+#
+# CONFIG_PACKAGE_luci-theme-argon is not set
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-theme-bootstrap-mmdvm=y
+# end of 4. Themes
+
 #
 # MMDVM
 #
@@ -10,22 +20,20 @@ CONFIG_PACKAGE_libmmdvm=y
 CONFIG_PACKAGE_libwxwidgets=y
 CONFIG_PACKAGE_mmdvm=y
 CONFIG_PACKAGE_mmdvm-cal=y
+# CONFIG_PACKAGE_mmdvm-crossmode is not set
 CONFIG_PACKAGE_mmdvm-host=y
 CONFIG_PACKAGE_mmdvm-luci=y
 CONFIG_LUCI_APP_MMDVM=y
 CONFIG_LUCI_THEME_BOOTSTRAP_MMDVM=y
-# CONFIG_PACKAGE_DGIdGateway is not set
-# CONFIG_PACKAGE_YSFGateway is not set
-# CONFIG_PACKAGE_YSFParrot is not set
-# CONFIG_PACKAGE_YSFReflector is not set
-# CONFIG_PACKAGE_YSF2DMR is not set
-CONFIG_PACKAGE_mmdvm-crossmode=y
+
 #
 # Translations
 #
 CONFIG_LUCI_LANG_zh-cn=y
+# end of Translations
+
 CONFIG_PACKAGE_mmdvm-luci-i18n-zh-cn=y
 CONFIG_PACKAGE_nxdn-clients=y
 CONFIG_PACKAGE_p25-clients=y
 CONFIG_PACKAGE_ysf-clients=y
-
+# end of MMDVM
