--- a/r3gipk.config
+++ b/r3gipk.config
@@ -6,7 +6,6 @@ CONFIG_PACKAGE_luci-app-mmdvm=y
 #
 # 4. Themes
 #
-# CONFIG_PACKAGE_luci-theme-argon is not set
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-bootstrap-mmdvm=y
 # end of 4. Themes
@@ -20,7 +19,7 @@ CONFIG_PACKAGE_libmmdvm=y
 CONFIG_PACKAGE_libwxwidgets=y
 CONFIG_PACKAGE_mmdvm=y
 CONFIG_PACKAGE_mmdvm-cal=y
-# CONFIG_PACKAGE_mmdvm-crossmode is not set
+CONFIG_PACKAGE_mmdvm-crossmode=y
 CONFIG_PACKAGE_mmdvm-host=y
 CONFIG_PACKAGE_mmdvm-luci=y
 CONFIG_LUCI_APP_MMDVM=y
